--- a/remote/index.html
+++ b/remote/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
         <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
         
-        <title>LED Control</title>
+        <title>Lights</title>
         
         <style>
             html {
